// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionSummaryDetails correctly renders a transaction 1`] = `
<Card>
  <div
    className="transaction-summary"
  >
    <div
      className="transaction-summary__section"
    >
      <h1
        className="transaction-summary__amount"
      >
        $15.00
        <span
          className="transaction-summary__amount-currency"
        >
          cur
        </span>
        <PaymentStatusChip
          transaction={
            Object {
              "amount": 1500,
              "created": 1568928240,
              "fee": 74,
              "id": "txn_38jdHA39KKA",
              "order": Object {
                "number": 45981,
                "url": "https://automattic.com/",
              },
              "source": Object {
                "billing_details": Object {
                  "name": "Customer Name",
                },
                "outcome": Object {
                  "risk_level": "normal",
                },
                "payment_method_details": Object {
                  "card": Object {
                    "brand": "visa",
                    "last4": "4242",
                  },
                  "type": "card",
                },
                "refunded": false,
              },
            }
          }
        />
      </h1>
      <div
        className="transaction-summary__breakdown"
      >
        <p>
          Fee: 
          $-0.74
        </p>
        <p>
          Net: 
          $0.00
        </p>
      </div>
    </div>
    <div
      className="transaction-summary__section"
    >
      <div
        className="transaction-summary__actions"
      >
        <ForwardRef(Button)
          disabled={false}
          href="https://automattic.com/#woocommerce-order-items"
          isDefault={true}
          isLarge={true}
        >
          Refund
        </ForwardRef(Button)>
      </div>
    </div>
  </div>
  <hr
    className="full-width"
  />
  <HorizontalList
    items={
      Array [
        Object {
          "content": "Sep 19, 2019, 5:24pm",
          "title": "Date",
        },
        Object {
          "content": <OrderLink
            order={
              Object {
                "number": 45981,
                "url": "https://automattic.com/",
              }
            }
          />,
          "title": "Order No.",
        },
        Object {
          "content": "Customer Name",
          "title": "Customer",
        },
        Object {
          "content": <PaymentMethodDetails
            payment={
              Object {
                "card": Object {
                  "brand": "visa",
                  "last4": "4242",
                },
                "type": "card",
              }
            }
          />,
          "title": "Payment Method",
        },
        Object {
          "content": "normal",
          "title": "Risk Evaluation",
        },
      ]
    }
  />
</Card>
`;

exports[`TransactionSummaryDetails renders defaults if transaction object is empty 1`] = `
<Card>
  <div
    className="transaction-summary"
  >
    <div
      className="transaction-summary__section"
    >
      <h1
        className="transaction-summary__amount"
      >
        $0.00
        <span
          className="transaction-summary__amount-currency"
        >
          cur
        </span>
        <PaymentStatusChip
          transaction={Object {}}
        />
      </h1>
      <div
        className="transaction-summary__breakdown"
      >
        <p>
          Fee: 
          $0.00
        </p>
        <p>
          Net: 
          $0.00
        </p>
      </div>
    </div>
    <div
      className="transaction-summary__section"
    >
      <div
        className="transaction-summary__actions"
      >
        <ForwardRef(Button)
          href="undefined#woocommerce-order-items"
          isDefault={true}
          isLarge={true}
        >
          Refund
        </ForwardRef(Button)>
      </div>
    </div>
  </div>
  <hr
    className="full-width"
  />
  <HorizontalList
    items={
      Array [
        Object {
          "content": "Dec 31, 1969, 7:00pm",
          "title": "Date",
        },
        Object {
          "content": <OrderLink />,
          "title": "Order No.",
        },
        Object {
          "content": "–",
          "title": "Customer",
        },
        Object {
          "content": <PaymentMethodDetails />,
          "title": "Payment Method",
        },
        Object {
          "content": "–",
          "title": "Risk Evaluation",
        },
      ]
    }
  />
</Card>
`;

exports[`TransactionSummaryDetails renders fully refunded information for a transaction 1`] = `
<Card>
  <div
    className="transaction-summary"
  >
    <div
      className="transaction-summary__section"
    >
      <h1
        className="transaction-summary__amount"
      >
        $15.00
        <span
          className="transaction-summary__amount-currency"
        >
          cur
        </span>
        <PaymentStatusChip
          transaction={
            Object {
              "amount": 1500,
              "created": 1568928240,
              "fee": 74,
              "id": "txn_38jdHA39KKA",
              "order": Object {
                "number": 45981,
                "url": "https://automattic.com/",
              },
              "source": Object {
                "amount_refunded": 1500,
                "refunded": true,
              },
            }
          }
        />
      </h1>
      <div
        className="transaction-summary__breakdown"
      >
        <p>
          Refunded: 
          $-15.00
        </p>
        <p>
          Fee: 
          $-0.74
        </p>
        <p>
          Net: 
          $0.00
        </p>
      </div>
    </div>
    <div
      className="transaction-summary__section"
    >
      <div
        className="transaction-summary__actions"
      >
        <ForwardRef(Button)
          disabled={true}
          href="https://automattic.com/#woocommerce-order-items"
          isDefault={true}
          isLarge={true}
        >
          Refund
        </ForwardRef(Button)>
      </div>
    </div>
  </div>
  <hr
    className="full-width"
  />
  <HorizontalList
    items={
      Array [
        Object {
          "content": "Sep 19, 2019, 5:24pm",
          "title": "Date",
        },
        Object {
          "content": <OrderLink
            order={
              Object {
                "number": 45981,
                "url": "https://automattic.com/",
              }
            }
          />,
          "title": "Order No.",
        },
        Object {
          "content": "–",
          "title": "Customer",
        },
        Object {
          "content": <PaymentMethodDetails />,
          "title": "Payment Method",
        },
        Object {
          "content": "–",
          "title": "Risk Evaluation",
        },
      ]
    }
  />
</Card>
`;

exports[`TransactionSummaryDetails renders partially refunded information for a transaction 1`] = `
<Card>
  <div
    className="transaction-summary"
  >
    <div
      className="transaction-summary__section"
    >
      <h1
        className="transaction-summary__amount"
      >
        $15.00
        <span
          className="transaction-summary__amount-currency"
        >
          cur
        </span>
        <PaymentStatusChip
          transaction={
            Object {
              "amount": 1500,
              "created": 1568928240,
              "fee": 74,
              "id": "txn_38jdHA39KKA",
              "order": Object {
                "number": 45981,
                "url": "https://automattic.com/",
              },
              "source": Object {
                "amount_refunded": 1200,
                "refunded": true,
              },
            }
          }
        />
      </h1>
      <div
        className="transaction-summary__breakdown"
      >
        <p>
          Refunded: 
          $-12.00
        </p>
        <p>
          Fee: 
          $-0.74
        </p>
        <p>
          Net: 
          $0.00
        </p>
      </div>
    </div>
    <div
      className="transaction-summary__section"
    >
      <div
        className="transaction-summary__actions"
      >
        <ForwardRef(Button)
          disabled={false}
          href="https://automattic.com/#woocommerce-order-items"
          isDefault={true}
          isLarge={true}
        >
          Refund more
        </ForwardRef(Button)>
      </div>
    </div>
  </div>
  <hr
    className="full-width"
  />
  <HorizontalList
    items={
      Array [
        Object {
          "content": "Sep 19, 2019, 5:24pm",
          "title": "Date",
        },
        Object {
          "content": <OrderLink
            order={
              Object {
                "number": 45981,
                "url": "https://automattic.com/",
              }
            }
          />,
          "title": "Order No.",
        },
        Object {
          "content": "–",
          "title": "Customer",
        },
        Object {
          "content": <PaymentMethodDetails />,
          "title": "Payment Method",
        },
        Object {
          "content": "–",
          "title": "Risk Evaluation",
        },
      ]
    }
  />
</Card>
`;
